<resources>
    <string name="app_name">CarPartsShop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék leírása.</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>
    <string name="bg_image">BG_IMAGE</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="land_bg" />

    <string-array name="phone_labels">
        <item>Otthon</item>
        <item>Munkahely</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="shopping_item_names">
        <item>Féktárcsa</item>
        <item>Hengerfej tömítés</item>
        <item>Gyújtógyertya</item>
        <item>Olajszűrő</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Féktárcsa D 251,2 x 10 mm, tele Magasság [mm]: 50, Tömeg [kg]: 7,43!</item>
        <item>Fémlemez tömítés</item>
        <item>Iridium középelektróda, Kulcsnyílás [mm]: 16, Menethossz [mm]: 19</item>
        <item>Felcsavarható szűrő Magasság [mm]: 70, Menetméret: M20x1.5</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>5</item>
        <item>5</item>
        <item>4</item>
        <item>3.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/cp_fektarcsa</item>
        <item>@drawable/cp_hengerfejl_tomites</item>
        <item>@drawable/cp_gyujtogyertya</item>
        <item>@drawable/cp_olajszuro</item>
    </array>

    <array name="shopping_item_price">
        <item>6 990 Ft</item>
        <item>1 750 Ft</item>
        <item>2 115 Ft</item>
        <item>5 430 Ft</item>
    </array>
    <string name="title_activity_contacts">ContactsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contacts">Contacts</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="views">views</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="vissza">Vissza</string>
</resources>
