<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        >
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="always"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"
        app:actionLayout="@layout/custom_menu_item"
        >
    </item>
    <item
        android:id="@+id/view_selector"
        app:showAsAction="always"
        android:title="@string/views"
        android:icon="@drawable/ic_view_grid"
        >
    </item>
    <item
        android:id="@+id/contacts"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit"
        android:title="@string/contacts"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit"
        android:title="@string/kijelentkez_s"
        android:orderInCategory="2">
    </item>
</menu>